--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -6,7 +6,6 @@ html {
 
 .container {
   text-align: center;
-  height: 100%;
   padding: 16px;
   box-sizing: border-box;
 }
@@ -45,4 +44,36 @@ html {
   font-family: sans-serif;
   color: white;
   text-align: left;
+}
+
+.container{
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 3fr 1fr;
+  grid-template-areas: 
+  "header header"
+  "sidebar nav"
+  "sidebar article"
+  "footer footer";
+}
+
+.header{
+  grid-area: header;
+}
+
+.sidebar{
+  grid-area: sidebar;
+}
+
+.nav{
+  grid-area: nav;
+}
+
+.article{
+  grid-area: article;
+}
+
+.footer{
+  grid-area: footer;
 }
