--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -49,13 +49,40 @@ html {
 .container{
   display: grid;
   gap: 15px;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 1fr 3fr 1fr;
+  grid-template-columns: 200px 1fr 3fr 200px ;
+  grid-template-rows: 100px 1fr 3fr 100px;
   grid-template-areas: 
-  "header header"
-  "sidebar nav"
-  "sidebar article"
-  "footer footer";
+  ". header header ."
+  ". sidebar nav ."
+  ". sidebar article ."
+  ". footer footer .";
+}
+
+@media only screen and (max-width: 1050px){
+  .container{
+  grid-template-columns: 10px 1fr 3fr 10px;
+  grid-template-rows: 100px 1fr 2fr 100px;
+  grid-template-areas: 
+  ". header header ."
+  ". sidebar nav ."
+  ". sidebar article ."
+  ". footer footer .";
+  }
+  
+}
+
+@media only screen and (max-width: 650px){
+  .container{
+  grid-template-columns: 5px 1fr 3fr 5px;
+  grid-template-rows: 100px 100px 1fr 200px 100px;
+  grid-template-areas: 
+  ". header header ."
+  ". nav nav ."
+  ". article article ."
+  ". sidebar sidebar ."
+  ". footer footer .";
+  }
+  
 }
 
 .header{
