--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -3,8 +3,21 @@
   padding: 0;
 }
 
+body{
+}
+
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 100px 50px 2fr 50px;
+  grid-template-areas: 
+  "header header"
+  "sidebar nav"
+  "sidebar article"
+  "footer footer";
+  gap: 5px;
+  min-height: 100vh;
 }
 
 .container div {
@@ -16,15 +29,33 @@
 }
 
 .header {
+  grid-area: header;
+  display: grid;
+  grid-template-columns: clamp(50px, 20%, 400px) 5fr;
   background-color: #393f4d;
+  align-items: center;
+}
+
+.header .logo{
+  justify-self: start;
+}
+
+.menu ul{
+  grid-column: 2 / -1;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
 }
 
 .sidebar {
+  grid-area: sidebar;
+  display: grid;
+  gap: 30px;
   background-color: #C50208;
 }
 
@@ -45,16 +76,30 @@
 }
 
 .nav {
+  grid-area: nav;
   background-color: #C50208;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: space-around;
+  justify-items: center;
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
 }
 
 .article {
+  grid-area: article;
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 15px;
 }
 
 .article p {
@@ -62,6 +107,7 @@
   font-family: sans-serif;
   color: white;
   text-align: left;
+  margin-top: 10px;
 }
 
 .article .card {
@@ -82,7 +128,9 @@
 }
 
 .footer {
+  grid-area: footer;
   background-color: #393f4d;
+  margin-bottom: 5px;
 }
 
 .footer p {
